Fix the Toggle Editor button
The CSS on the toggle editor button was messed up by the KA change.
- Change that button to match style class of program buttons, which still work.
- Neither KA nor the extension uses uses the "link_1uvuyao-o_O-computing_1w8n1i8" button class, so we can remove it.
- Change the hide editor logic to no longer hide the toolbar; instead centering the program output above the toolbar.

--- a/styles/general.css
+++ b/styles/general.css
@@ -48,22 +48,18 @@ body .wrap_xyqcvi {
 }
 
 /** Hide editor feature **/
-.kae-hide-400 {
-    min-width: 400px !important;
-    width: 400px !important;
+.kae-hide-wrap .wrapScratchpadInner_poyjc-o_O-wrapScratchpadInnerBorder_1b0rgvs {
+    display: block !important;
+    text-align: center;
 }
 
-.kae-hide-500 {
-    min-width: 500px !important;
-    width: 500px !important;
+.kae-hide-wrap .scratchpad-canvas-wrap {
+    display: inline-block !important;
+    border-left: 1px solid rgba(33, 37, 45, 0.16) !important;
+    border-right: 1px solid rgba(33, 37, 45, 0.16) !important;
 }
 
-.kae-hide-600 {
-    min-width: 600px !important;
-    width: 600px !important;
-}
-
-[class*="kae-hide-"] .kae-hide {
+.kae-hide {
     display: none !important;
 }
 
